--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ ul li, ol li {
   height: 2.2vh;
   width: 18%;
   border: 2px solid;
-  margin-left: 2%;
+  margin-right: 2%;
   margin-top: 3%;
   text-align: center;
   line-height: 2.2vh;
