--- a/css/main.css
+++ b/css/main.css
@@ -18,23 +18,23 @@ input {
   text-align: center;
 }
 
-body{
+body {
   width: 100%;
   font-size: 1vw;
 }
 
-header{
-  background:#7397fa;
+header {
+  background: #7397fa;
   height: 15vh;
   width: 100%;
-  text-align:  right;
+  text-align: right;
   line-height: 15vh;
   float: left;
   font-size: 1.2em;
 }
 
-footer{
-  background:#7397fa;
+footer {
+  background: #7397fa;
   height: 15vh;
   width: 100%;
   text-align: left;
@@ -42,7 +42,6 @@ footer{
   float: left;
   font-size: 1.2em;
 }
-
 
 ul li, ol li {
   list-style-position: inside;
@@ -63,7 +62,7 @@ ul li, ol li {
   font-size: 1.2em;
 }
 
-#block_x{
+#block_x {
   background: white;
   height: 2.2vh;
   width: 18%;
@@ -75,7 +74,7 @@ ul li, ol li {
   float: left;
 }
 
-#block_y{
+#block_y {
   background: white;
   height: 2.2vh;
   width: 18%;
@@ -96,7 +95,7 @@ ul li, ol li {
   font-size: 1.2em;
 }
 
-#block_2{
+#block_2 {
   background: white;
   height: 60vh;
   width: 60%;
@@ -105,7 +104,7 @@ ul li, ol li {
   font-size: 1.2em;
 }
 
-#block_3{
+#block_3 {
   background: peachpuff;
   height: 70vh;
   width: 20%;
@@ -121,7 +120,6 @@ ul li, ol li {
   text-align: center;
   float: left;
 }
-
 
 #text_block_2_index a {
   color: black;
@@ -141,7 +139,7 @@ ul li, ol li {
   text-decoration: none;
 }
 
-#text_block_3_index{
+#text_block_3_index {
   text-align: center;
   margin: 3%;
   font-size: 1.2em;
@@ -172,7 +170,8 @@ ul li, ol li {
 
 #img3 {
   align-items: center;
-  margin-left, margin-right: 1.5%;
+  margin-left: 1.5%;
+  margin-right: 1.5%;
   margin-top: 10vh;
   width: 90%;
   height: 30vh;
@@ -194,9 +193,10 @@ ul li, ol li {
   margin-right: 3%;
 }
 
-#block_1 ul, #block_1 h3, #block_1 ol, #block_3 h3{
+#block_1 ul, #block_1 h3, #block_1 ol, #block_3 h3 {
   margin-top: 3vh;
-  margin-left, margin-right: 3%;
+  margin-left: 3%;
+  margin-right: 3%;
   font-size: 1.2em;
   list-style-position: inside;
 }
@@ -213,7 +213,7 @@ ul li, ol li {
   font-size: 1em;
 }
 
-#block_4_ul_index{
+#block_4_ul_index {
   font-size: 1.2em;
 }
 
@@ -240,4 +240,84 @@ ul li, ol li {
 
 #text_block_4_faq {
   font-size: 1.1em;
+}
+
+/* Планшети (від 768px до 1024px) */
+@media (max-width: 1024px) and (min-width: 768px) {
+  #block_1, #block_3 {
+    width: 100%;
+    height: auto;
+  }
+
+  #block_2 {
+    width: 100%;
+    height: auto;
+    float: none;
+  }
+
+  header, footer {
+    height: 10vh;
+    line-height: 10vh;
+  }
+
+  #block_4 {
+    width: 100%;
+    height: auto;
+  }
+}
+
+/* Мобільні пристрої (менше 768px) */
+@media (max-width: 767px) {
+  body {
+    font-size: 2.5vw;
+  }
+
+  header, footer {
+    height: 8vh;
+    line-height: 8vh;
+    font-size: 1em;
+  }
+
+  #block_1, #block_2, #block_3 {
+    width: 100%;
+    height: auto;
+    float: none;
+    margin: 1% 0;
+  }
+
+  #block_4 {
+    width: 100%;
+    height: auto;
+  }
+
+  #block_x, #block_y {
+    width: 45%;
+    height: auto;
+    margin: 1% auto;
+    float: none;
+  }
+
+  #block_2 #img1, #block_2 #img2, #block_2 #img4, #block_2 #img5, #img3 {
+    width: 90%;
+    height: auto;
+  }
+}
+
+/* Дуже маленькі екрани (менше 480px) */
+@media (max-width: 480px) {
+  h3 {
+    font-size: 1em;
+  }
+
+  body {
+    font-size: 3.5vw;
+  }
+
+  a {
+    font-size: 1em;
+  }
+
+  #block_x, #block_y {
+    width: 100%;
+  }
 }
